--- a/src/header/header.css
+++ b/src/header/header.css
@@ -20,5 +20,8 @@
     font-size: 100px;
 }
 .headerImage{
-    
+    width: 100% ;
+    height: 450px;
+    margin-top: 80px;
+    object-fit: cover;
 }
